knowledge_base/knowledge/v15/capl/structured/Obsolete/EthGetTokenString.md
# EthGetTokenString

> Category: `Obsolete` | Type: `notes`

## Description

See Also

| Deprecated Function Replaced by: ethernetPacket::protocol::field::GetData |  |  |  |  |
|---|---|---|---|---|
| Function Syntax | long EthGetTokenString( long packet, char protocolDesignator[], char tokenDesignator[], long bufferSize, char buffer[] ); |  |  |  |
| Function | The function copies characters from the token and adds a terminating "\0". |  |  |  |
| Parameters | packet handle of a packet that has been created with EthInitPacket |  |  |  |
| protocolDesignator name of the protocol, e.g. "udp" |  |  |  |  |
| tokenDesignator name of the token, e.g. "data" |  |  |  |  |
| bufferSize size of buffer in byte The function adds a terminating "\0". Thus the maximum number of copied characters is bufferSize-1. |  |  |  |  |
| buffer buffer in which the data are copied |  |  |  |  |
| Return Values | number of copied characters or 0 With EthGetLastError you can check if the function has been processed successfully. |  |  |  |
| Availability | Up to Version | Restricted To | Measurement Setup | Simulation/Test Setup |
| 7.2-12.0 | Ethernet | — | • |  |
| Example Node System - PreStart in CAPL Browser on preStart{ EthReceivePacket("OnEthPacket");} Node Callback Function in CAPL Browser void OnEthPacket( LONG channel, LONG dir, LONG packetHandle ){ CHAR rx_str[100]; CHAR error[100]; // get the payload of the packet EthGetTokenString( packetHandle, "udp", "data", elCount(rx_str), rx_str ); if (EthGetLastError() == 0) { write(rx_str); } else { EthGetLastErrorText( elCount(error), error ); write("Error: %s", error ); }} |  |  |  |  |

| Version 15© Vector Informatik GmbH |
|---|
